now voroni diagram works succesfully